// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Get main blocks transformer Блок "Идеи" возвращает неархивные модели тегов 1`] = `
Object {
  "blocks": Array [
    Object {
      "ideas": Object {
        "posts": Array [
          "v-rossii-startovali-prodazhi-restaylingovogo-kia-rio-novye-logotip-i-mediasistema",
          "toyota-postavit-motor-ot-novogo-land-cruiser-na-bolid-dlya-dakara",
        ],
        "tags": Array [
          Object {
            "isHot": false,
            "isPartnership": false,
            "partnershipImage": null,
            "partnershipLink": null,
            "title": " Подкаст",
            "urlPart": "podcast",
          },
          Object {
            "isHot": false,
            "isPartnership": false,
            "partnershipImage": null,
            "partnershipLink": null,
            "title": "Концепты",
            "urlPart": "conceptcar",
          },
        ],
      },
      "type": "ideas",
    },
  ],
  "posts": Object {
    "toyota-postavit-motor-ot-novogo-land-cruiser-na-bolid-dlya-dakara": Object {
      "blocks": undefined,
      "categories": Array [],
      "lead": "Новый спортивный внедорожник проходит испытания в Южной Африке",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T21:06:10.000Z,
      "tags": Array [],
      "title": "Toyota показала болид для Дакара с мотором от нового Land Cruiser ",
      "urlPart": "toyota-postavit-motor-ot-novogo-land-cruiser-na-bolid-dlya-dakara",
    },
    "v-rossii-startovali-prodazhi-restaylingovogo-kia-rio-novye-logotip-i-mediasistema": Object {
      "blocks": undefined,
      "categories": Array [],
      "lead": "Базовая стоимость Rio в обоих кузовах после обновления выросла на 5 тысяч рублей",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T22:11:59.000Z,
      "tags": Array [],
      "title": "В России стартовали продажи Kia Rio нового модельного года",
      "urlPart": "v-rossii-startovali-prodazhi-restaylingovogo-kia-rio-novye-logotip-i-mediasistema",
    },
  },
}
`;

exports[`Get main blocks transformer Блок "Идеи" дополняется по категории опубликованными постами с правильной сортировкой 1`] = `
Object {
  "blocks": Array [
    Object {
      "ideas": Object {
        "category": "feature",
        "posts": Array [
          "volkswagen-predstavil-bystruyu-zaryadnuyu-stanciyu-s-nakopitelnymi-batareyami",
          "v-rossii-startovali-prodazhi-restaylingovogo-kia-rio-novye-logotip-i-mediasistema",
        ],
        "tags": Array [],
      },
      "type": "ideas",
    },
  ],
  "posts": Object {
    "v-rossii-startovali-prodazhi-restaylingovogo-kia-rio-novye-logotip-i-mediasistema": Object {
      "blocks": undefined,
      "categories": Array [],
      "lead": "Базовая стоимость Rio в обоих кузовах после обновления выросла на 5 тысяч рублей",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T22:11:59.000Z,
      "tags": Array [],
      "title": "В России стартовали продажи Kia Rio нового модельного года",
      "urlPart": "v-rossii-startovali-prodazhi-restaylingovogo-kia-rio-novye-logotip-i-mediasistema",
    },
    "volkswagen-predstavil-bystruyu-zaryadnuyu-stanciyu-s-nakopitelnymi-batareyami": Object {
      "blocks": undefined,
      "categories": Array [
        Object {
          "tags": Array [],
          "title": "Фичер",
          "urlPart": "feature",
        },
      ],
      "lead": "В отличие от большинства, E.ON Drive Booster отдаёт автомобилю от собственных аккумуляторов",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T20:48:32.000Z,
      "tags": Array [],
      "title": "Volkswagen запустил быструю зарядную станцию с накопительными батареями",
      "urlPart": "volkswagen-predstavil-bystruyu-zaryadnuyu-stanciyu-s-nakopitelnymi-batareyami",
    },
  },
}
`;

exports[`Get main blocks transformer Блок "Идеи" не возвращается, если нет достаточного количества постов для дополнения 1`] = `
Object {
  "blocks": Array [],
  "posts": Object {},
}
`;

exports[`Get main blocks transformer Блок "Квиз" корректно трансформируется с постом и квизом 1`] = `
Object {
  "blocks": Array [
    Object {
      "quiz": Object {
        "category": Object {
          "title": "arenda",
          "urlPart": "arenda",
        },
        "listingButtonText": "listingButtonText",
        "post": Object {
          "quiz": Object {
            "firstQuestion": Object {
              "answers": Array [
                Object {
                  "image": null,
                  "isRight": true,
                  "title": "<p >Лофт<br></p>
",
                },
                Object {
                  "image": null,
                  "title": "<p >Лаунж</p>
",
                },
                Object {
                  "image": null,
                  "title": "<p >Минимализм</p>
",
                },
              ],
              "image": Object {
                "imagename": "pexels-skylar-kang-6044805.jpg_1647507449948",
                "meta": Object {
                  "orig-format": "JPEG",
                  "orig-size-bytes": 510841,
                },
                "sizes": Object {
                  "1098x1098": Object {
                    "height": 732,
                    "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/3911415/pexels-skylar-kang-6044805.jpg_1647507449948/1098x1098",
                    "width": 1098,
                  },
                  "1200х1200": Object {
                    "height": 800,
                    "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/3911415/pexels-skylar-kang-6044805.jpg_1647507449948/1200х1200",
                    "width": 1200,
                  },
                  "1252x1252": Object {
                    "height": 835,
                    "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/3911415/pexels-skylar-kang-6044805.jpg_1647507449948/1252x1252",
                    "width": 1252,
                  },
                  "1428x1428": Object {
                    "height": 952,
                    "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/3911415/pexels-skylar-kang-6044805.jpg_1647507449948/1428x1428",
                    "width": 1428,
                  },
                  "1600x1600": Object {
                    "height": 980,
                    "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/3911415/pexels-skylar-kang-6044805.jpg_1647507449948/1600x1600",
                    "width": 1470,
                  },
                  "1920x1920": Object {
                    "height": 980,
                    "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/3911415/pexels-skylar-kang-6044805.jpg_1647507449948/1920x1920",
                    "width": 1470,
                  },
                  "320х320": Object {
                    "height": 213,
                    "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/3911415/pexels-skylar-kang-6044805.jpg_1647507449948/320х320",
                    "width": 320,
                  },
                  "338x338": Object {
                    "height": 225,
                    "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/3911415/pexels-skylar-kang-6044805.jpg_1647507449948/338x338",
                    "width": 338,
                  },
                  "439x439": Object {
                    "height": 293,
                    "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/3911415/pexels-skylar-kang-6044805.jpg_1647507449948/439x439",
                    "width": 439,
                  },
                  "460х460": Object {
                    "height": 307,
                    "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/3911415/pexels-skylar-kang-6044805.jpg_1647507449948/460х460",
                    "width": 460,
                  },
                  "571x571": Object {
                    "height": 381,
                    "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/3911415/pexels-skylar-kang-6044805.jpg_1647507449948/571x571",
                    "width": 571,
                  },
                  "650x650": Object {
                    "height": 433,
                    "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/3911415/pexels-skylar-kang-6044805.jpg_1647507449948/650x650",
                    "width": 650,
                  },
                  "845x845": Object {
                    "height": 563,
                    "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/3911415/pexels-skylar-kang-6044805.jpg_1647507449948/845x845",
                    "width": 845,
                  },
                  "optimize": Object {
                    "height": 980,
                    "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/3911415/pexels-skylar-kang-6044805.jpg_1647507449948/optimize",
                    "width": 1470,
                  },
                  "orig": Object {
                    "height": 980,
                    "path": "https://images.mds-proxy.test.avto.ru/get-vertis-journal/3911415/pexels-skylar-kang-6044805.jpg_1647507449948/orig",
                    "width": 1470,
                  },
                },
              },
              "incorrectAnswer": Object {
                "description": "<p ><span>Для «лаунжа»&nbsp;</span>основа концепции —&nbsp;<span>комфорт: мягкая мебель, подушки, кресла. А для минимализма характерна свобода пространства, но суть — в строгости и простоте. Тут же всё пространство буквально кричит про индустриальность — то есть лофтовую составляющую.</span></p>
",
                "image": null,
                "title": "Не угадали",
              },
              "question": "<p ><span>Начнём с простого. Этот стиль выбирают те, кто предпочитают большие свободные пространства-студии. Промышленная эстетика здесь совмещается с технологичностью и комфортом.&nbsp;</span></p>
",
              "rightAnswer": Object {
                "description": "<p ><span>Loft в переводе на русский означает «чердак». Стиль сформировался ещё в первой половине ХХ века, когда помещения неработающих цехов и мастерских начали сдавать в аренду художникам и музыкантам. Сейчас этот стиль сильно модернизировался, но общая концепция сохранилась.&nbsp;</span></p>
",
                "image": null,
                "title": "Верно! ",
              },
            },
            "questionsNum": 7,
          },
          "title": "В России стартовали продажи Kia Rio нового модельного года",
          "urlPart": "v-rossii-startovali-prodazhi-restaylingovogo-kia-rio-novye-logotip-i-mediasistema",
        },
        "postButtonText": "postButtonText",
        "tag": undefined,
        "title": "title",
      },
      "type": "quiz",
    },
  ],
  "posts": Object {},
}
`;

exports[`Get main blocks transformer Блок "Учебник" возвращает неархивные модели тегов 1`] = `
Object {
  "blocks": Array [
    Object {
      "textbook": Object {
        "tabs": Array [
          Object {
            "posts": Array [
              "v-rossii-startovali-prodazhi-restaylingovogo-kia-rio-novye-logotip-i-mediasistema",
              "toyota-postavit-motor-ot-novogo-land-cruiser-na-bolid-dlya-dakara",
              "volkswagen-predstavil-bystruyu-zaryadnuyu-stanciyu-s-nakopitelnymi-batareyami",
            ],
            "tag": Object {
              "isHot": false,
              "isPartnership": false,
              "partnershipImage": null,
              "partnershipLink": null,
              "title": "Концепты",
              "urlPart": "conceptcar",
            },
          },
          Object {
            "posts": Array [
              "v-rossii-startovali-prodazhi-restaylingovogo-kia-rio-novye-logotip-i-mediasistema",
              "toyota-postavit-motor-ot-novogo-land-cruiser-na-bolid-dlya-dakara",
              "volkswagen-predstavil-bystruyu-zaryadnuyu-stanciyu-s-nakopitelnymi-batareyami",
            ],
            "tag": Object {
              "isHot": false,
              "isPartnership": false,
              "partnershipImage": null,
              "partnershipLink": null,
              "title": " Подкаст",
              "urlPart": "podcast",
            },
          },
        ],
      },
      "type": "textbook",
    },
  ],
  "posts": Object {
    "toyota-postavit-motor-ot-novogo-land-cruiser-na-bolid-dlya-dakara": Object {
      "blocks": undefined,
      "categories": Array [],
      "lead": "Новый спортивный внедорожник проходит испытания в Южной Африке",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T21:06:10.000Z,
      "tags": Array [],
      "title": "Toyota показала болид для Дакара с мотором от нового Land Cruiser ",
      "urlPart": "toyota-postavit-motor-ot-novogo-land-cruiser-na-bolid-dlya-dakara",
    },
    "v-rossii-startovali-prodazhi-restaylingovogo-kia-rio-novye-logotip-i-mediasistema": Object {
      "blocks": undefined,
      "categories": Array [],
      "lead": "Базовая стоимость Rio в обоих кузовах после обновления выросла на 5 тысяч рублей",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T22:11:59.000Z,
      "tags": Array [],
      "title": "В России стартовали продажи Kia Rio нового модельного года",
      "urlPart": "v-rossii-startovali-prodazhi-restaylingovogo-kia-rio-novye-logotip-i-mediasistema",
    },
    "volkswagen-predstavil-bystruyu-zaryadnuyu-stanciyu-s-nakopitelnymi-batareyami": Object {
      "blocks": undefined,
      "categories": Array [],
      "lead": "В отличие от большинства, E.ON Drive Booster отдаёт автомобилю от собственных аккумуляторов",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T20:48:32.000Z,
      "tags": Array [],
      "title": "Volkswagen запустил быструю зарядную станцию с накопительными батареями",
      "urlPart": "volkswagen-predstavil-bystruyu-zaryadnuyu-stanciyu-s-nakopitelnymi-batareyami",
    },
  },
}
`;

exports[`Get main blocks transformer Блок "Учебник" дополняется по категории опубликованными постами с правильной сортировкой 1`] = `
Object {
  "blocks": Array [],
  "posts": Object {
    "v-rossii-startovali-prodazhi-restaylingovogo-kia-rio-novye-logotip-i-mediasistema": Object {
      "blocks": undefined,
      "categories": Array [],
      "lead": "Базовая стоимость Rio в обоих кузовах после обновления выросла на 5 тысяч рублей",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T22:11:59.000Z,
      "tags": Array [],
      "title": "В России стартовали продажи Kia Rio нового модельного года",
      "urlPart": "v-rossii-startovali-prodazhi-restaylingovogo-kia-rio-novye-logotip-i-mediasistema",
    },
  },
}
`;

exports[`Get main blocks transformer Блок "Учебник" не возвращается, если нет достаточного количества постов для дополнения 1`] = `
Object {
  "blocks": Array [],
  "posts": Object {},
}
`;

exports[`Get main blocks transformer Блок "Читать ещё" дополняется постами с выбранной категорией c правильной сортировкой 1`] = `
Object {
  "blocks": Array [
    Object {
      "readMore": Object {
        "category": "feature",
        "morePostsNum": 4,
        "posts": Array [
          "v-rossii-startovali-prodazhi-restaylingovogo-kia-rio-novye-logotip-i-mediasistema",
          "volkswagen-predstavil-bystruyu-zaryadnuyu-stanciyu-s-nakopitelnymi-batareyami",
          "caterham-predstavila-byudzhetnyy-sportkar-on-okazalsya-samym-lyogkim-v-istorii",
        ],
        "postsCount": "3",
      },
      "type": "readMore",
    },
  ],
  "posts": Object {
    "caterham-predstavila-byudzhetnyy-sportkar-on-okazalsya-samym-lyogkim-v-istorii": Object {
      "blocks": undefined,
      "categories": Array [
        Object {
          "tags": Array [],
          "title": "Фичер",
          "urlPart": "feature",
        },
      ],
      "lead": "Caterham Seven 170 оснащается мотором на 660 кубиков, но способен разогнаться до 169 км/ч",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T19:40:13.000Z,
      "tags": Array [],
      "title": "Компания Caterham показала дешёвый спорткар — он оказался самым лёгким в истории",
      "urlPart": "caterham-predstavila-byudzhetnyy-sportkar-on-okazalsya-samym-lyogkim-v-istorii",
    },
    "v-rossii-startovali-prodazhi-restaylingovogo-kia-rio-novye-logotip-i-mediasistema": Object {
      "blocks": undefined,
      "categories": Array [
        Object {
          "tags": Array [],
          "title": "Фичер",
          "urlPart": "feature",
        },
      ],
      "lead": "Базовая стоимость Rio в обоих кузовах после обновления выросла на 5 тысяч рублей",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T22:11:59.000Z,
      "tags": Array [],
      "title": "В России стартовали продажи Kia Rio нового модельного года",
      "urlPart": "v-rossii-startovali-prodazhi-restaylingovogo-kia-rio-novye-logotip-i-mediasistema",
    },
    "volkswagen-predstavil-bystruyu-zaryadnuyu-stanciyu-s-nakopitelnymi-batareyami": Object {
      "blocks": undefined,
      "categories": Array [
        Object {
          "tags": Array [],
          "title": "Фичер",
          "urlPart": "feature",
        },
      ],
      "lead": "В отличие от большинства, E.ON Drive Booster отдаёт автомобилю от собственных аккумуляторов",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T20:48:32.000Z,
      "tags": Array [],
      "title": "Volkswagen запустил быструю зарядную станцию с накопительными батареями",
      "urlPart": "volkswagen-predstavil-bystruyu-zaryadnuyu-stanciyu-s-nakopitelnymi-batareyami",
    },
  },
}
`;

exports[`Get main blocks transformer Блок "Читать ещё" дополняется постами с выбранным тегом c правильной сортировкой 1`] = `
Object {
  "blocks": Array [
    Object {
      "readMore": Object {
        "morePostsNum": 4,
        "posts": Array [
          "toyota-postavit-motor-ot-novogo-land-cruiser-na-bolid-dlya-dakara",
          "volkswagen-predstavil-bystruyu-zaryadnuyu-stanciyu-s-nakopitelnymi-batareyami",
          "caterham-predstavila-byudzhetnyy-sportkar-on-okazalsya-samym-lyogkim-v-istorii",
        ],
        "postsCount": "3",
        "tag": "conceptcar",
      },
      "type": "readMore",
    },
  ],
  "posts": Object {
    "caterham-predstavila-byudzhetnyy-sportkar-on-okazalsya-samym-lyogkim-v-istorii": Object {
      "blocks": undefined,
      "categories": Array [],
      "lead": "Caterham Seven 170 оснащается мотором на 660 кубиков, но способен разогнаться до 169 км/ч",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T19:40:13.000Z,
      "tags": Array [
        Object {
          "isHot": false,
          "isPartnership": false,
          "mmm": null,
          "partnershipBadgeName": null,
          "partnershipImage": null,
          "partnershipLink": null,
          "partnershipName": null,
          "title": "Концепты",
          "urlPart": "conceptcar",
        },
      ],
      "title": "Компания Caterham показала дешёвый спорткар — он оказался самым лёгким в истории",
      "urlPart": "caterham-predstavila-byudzhetnyy-sportkar-on-okazalsya-samym-lyogkim-v-istorii",
    },
    "toyota-postavit-motor-ot-novogo-land-cruiser-na-bolid-dlya-dakara": Object {
      "blocks": undefined,
      "categories": Array [],
      "lead": "Новый спортивный внедорожник проходит испытания в Южной Африке",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T21:06:10.000Z,
      "tags": Array [
        Object {
          "isHot": false,
          "isPartnership": false,
          "mmm": null,
          "partnershipBadgeName": null,
          "partnershipImage": null,
          "partnershipLink": null,
          "partnershipName": null,
          "title": "Концепты",
          "urlPart": "conceptcar",
        },
      ],
      "title": "Toyota показала болид для Дакара с мотором от нового Land Cruiser ",
      "urlPart": "toyota-postavit-motor-ot-novogo-land-cruiser-na-bolid-dlya-dakara",
    },
    "volkswagen-predstavil-bystruyu-zaryadnuyu-stanciyu-s-nakopitelnymi-batareyami": Object {
      "blocks": undefined,
      "categories": Array [],
      "lead": "В отличие от большинства, E.ON Drive Booster отдаёт автомобилю от собственных аккумуляторов",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T20:48:32.000Z,
      "tags": Array [
        Object {
          "isHot": false,
          "isPartnership": false,
          "mmm": null,
          "partnershipBadgeName": null,
          "partnershipImage": null,
          "partnershipLink": null,
          "partnershipName": null,
          "title": "Концепты",
          "urlPart": "conceptcar",
        },
      ],
      "title": "Volkswagen запустил быструю зарядную станцию с накопительными батареями",
      "urlPart": "volkswagen-predstavil-bystruyu-zaryadnuyu-stanciyu-s-nakopitelnymi-batareyami",
    },
  },
}
`;

exports[`Get main blocks transformer Блок "Читать ещё" дополняется только опубликованными постами 1`] = `
Object {
  "blocks": Array [
    Object {
      "readMore": Object {
        "category": "feature",
        "morePostsNum": 4,
        "posts": Array [
          "v-rossii-startovali-prodazhi-restaylingovogo-kia-rio-novye-logotip-i-mediasistema",
          "caterham-predstavila-byudzhetnyy-sportkar-on-okazalsya-samym-lyogkim-v-istorii",
          "posmotrite-kak-stroili-iz-lego-samyy-bolshoy-v-mire-bolid-formuly1",
          "realnye-ceny-na-avtomobili-samye-bolshie-nacenki-na-rynke",
        ],
      },
      "type": "readMore",
    },
  ],
  "posts": Object {
    "caterham-predstavila-byudzhetnyy-sportkar-on-okazalsya-samym-lyogkim-v-istorii": Object {
      "blocks": undefined,
      "categories": Array [
        Object {
          "tags": Array [],
          "title": "Фичер",
          "urlPart": "feature",
        },
      ],
      "lead": "Caterham Seven 170 оснащается мотором на 660 кубиков, но способен разогнаться до 169 км/ч",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T19:40:13.000Z,
      "tags": Array [],
      "title": "Компания Caterham показала дешёвый спорткар — он оказался самым лёгким в истории",
      "urlPart": "caterham-predstavila-byudzhetnyy-sportkar-on-okazalsya-samym-lyogkim-v-istorii",
    },
    "posmotrite-kak-stroili-iz-lego-samyy-bolshoy-v-mire-bolid-formuly1": Object {
      "blocks": undefined,
      "categories": Array [
        Object {
          "tags": Array [],
          "title": "Фичер",
          "urlPart": "feature",
        },
      ],
      "lead": "Рекорд книги Гиннесcа приурочен к первой в истории Саудовской Аравии гонке Формулы-1",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T17:00:00.000Z,
      "tags": Array [],
      "title": "Посмотрите, как строили из Лего самый большой в мире болид Формулы-1",
      "urlPart": "posmotrite-kak-stroili-iz-lego-samyy-bolshoy-v-mire-bolid-formuly1",
    },
    "realnye-ceny-na-avtomobili-samye-bolshie-nacenki-na-rynke": Object {
      "blocks": undefined,
      "categories": Array [
        Object {
          "tags": Array [],
          "title": "Фичер",
          "urlPart": "feature",
        },
      ],
      "lead": "Какую доплату просят дилеры за востребованные и дорогие автомобили",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T16:01:00.000Z,
      "tags": Array [],
      "title": "На какие модели дилеры делают наценку по миллиону и больше: реальные цены на автомобили",
      "urlPart": "realnye-ceny-na-avtomobili-samye-bolshie-nacenki-na-rynke",
    },
    "v-rossii-startovali-prodazhi-restaylingovogo-kia-rio-novye-logotip-i-mediasistema": Object {
      "blocks": undefined,
      "categories": Array [
        Object {
          "tags": Array [],
          "title": "Фичер",
          "urlPart": "feature",
        },
      ],
      "lead": "Базовая стоимость Rio в обоих кузовах после обновления выросла на 5 тысяч рублей",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T22:11:59.000Z,
      "tags": Array [],
      "title": "В России стартовали продажи Kia Rio нового модельного года",
      "urlPart": "v-rossii-startovali-prodazhi-restaylingovogo-kia-rio-novye-logotip-i-mediasistema",
    },
  },
}
`;

exports[`Get main blocks transformer Блок "Читать ещё" сохраняет выбранные явно посты на правильных позициях 1`] = `
Object {
  "blocks": Array [
    Object {
      "readMore": Object {
        "category": "feature",
        "morePostsNum": 5,
        "posts": Array [
          "v-rossii-startovali-prodazhi-restaylingovogo-kia-rio-novye-logotip-i-mediasistema",
          "volkswagen-predstavil-bystruyu-zaryadnuyu-stanciyu-s-nakopitelnymi-batareyami",
          "toyota-postavit-motor-ot-novogo-land-cruiser-na-bolid-dlya-dakara",
          "caterham-predstavila-byudzhetnyy-sportkar-on-okazalsya-samym-lyogkim-v-istorii",
          "ford-narisoval-letayushchiy-avtomobil-budushchego-po-zayavkam-mladshih-shkolnikov",
        ],
      },
      "type": "readMore",
    },
  ],
  "posts": Object {
    "caterham-predstavila-byudzhetnyy-sportkar-on-okazalsya-samym-lyogkim-v-istorii": Object {
      "blocks": undefined,
      "categories": Array [],
      "lead": "Caterham Seven 170 оснащается мотором на 660 кубиков, но способен разогнаться до 169 км/ч",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T19:40:13.000Z,
      "tags": Array [],
      "title": "Компания Caterham показала дешёвый спорткар — он оказался самым лёгким в истории",
      "urlPart": "caterham-predstavila-byudzhetnyy-sportkar-on-okazalsya-samym-lyogkim-v-istorii",
    },
    "ford-narisoval-letayushchiy-avtomobil-budushchego-po-zayavkam-mladshih-shkolnikov": Object {
      "blocks": undefined,
      "categories": Array [
        Object {
          "tags": Array [],
          "title": "Фичер",
          "urlPart": "feature",
        },
      ],
      "lead": "Школьники заявили, что автомобиль будущего должен передвигаться на электротяге и уметь летать",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T18:37:44.000Z,
      "tags": Array [],
      "title": "Электрокар Ford 2030 года от 8-летних детей: представлены изображения",
      "urlPart": "ford-narisoval-letayushchiy-avtomobil-budushchego-po-zayavkam-mladshih-shkolnikov",
    },
    "toyota-postavit-motor-ot-novogo-land-cruiser-na-bolid-dlya-dakara": Object {
      "blocks": undefined,
      "categories": Array [],
      "lead": "Новый спортивный внедорожник проходит испытания в Южной Африке",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T21:06:10.000Z,
      "tags": Array [],
      "title": "Toyota показала болид для Дакара с мотором от нового Land Cruiser ",
      "urlPart": "toyota-postavit-motor-ot-novogo-land-cruiser-na-bolid-dlya-dakara",
    },
    "v-rossii-startovali-prodazhi-restaylingovogo-kia-rio-novye-logotip-i-mediasistema": Object {
      "blocks": undefined,
      "categories": Array [
        Object {
          "tags": Array [],
          "title": "Фичер",
          "urlPart": "feature",
        },
      ],
      "lead": "Базовая стоимость Rio в обоих кузовах после обновления выросла на 5 тысяч рублей",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T22:11:59.000Z,
      "tags": Array [],
      "title": "В России стартовали продажи Kia Rio нового модельного года",
      "urlPart": "v-rossii-startovali-prodazhi-restaylingovogo-kia-rio-novye-logotip-i-mediasistema",
    },
    "volkswagen-predstavil-bystruyu-zaryadnuyu-stanciyu-s-nakopitelnymi-batareyami": Object {
      "blocks": undefined,
      "categories": Array [
        Object {
          "tags": Array [],
          "title": "Фичер",
          "urlPart": "feature",
        },
      ],
      "lead": "В отличие от большинства, E.ON Drive Booster отдаёт автомобилю от собственных аккумуляторов",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T20:48:32.000Z,
      "tags": Array [],
      "title": "Volkswagen запустил быструю зарядную станцию с накопительными батареями",
      "urlPart": "volkswagen-predstavil-bystruyu-zaryadnuyu-stanciyu-s-nakopitelnymi-batareyami",
    },
  },
}
`;

exports[`Get main blocks transformer Блоки в секциях дополняются постами с категорией секции c правильной сортировкой 1`] = `
Object {
  "blocks": Array [
    Object {
      "section": Object {
        "blocks": Array [
          Object {
            "threeRight": Array [
              "v-rossii-startovali-prodazhi-restaylingovogo-kia-rio-novye-logotip-i-mediasistema",
              "volkswagen-predstavil-bystruyu-zaryadnuyu-stanciyu-s-nakopitelnymi-batareyami",
              "caterham-predstavila-byudzhetnyy-sportkar-on-okazalsya-samym-lyogkim-v-istorii",
            ],
            "type": "threeRight",
          },
          Object {
            "two": Array [
              "ford-narisoval-letayushchiy-avtomobil-budushchego-po-zayavkam-mladshih-shkolnikov",
              "posmotrite-kak-stroili-iz-lego-samyy-bolshoy-v-mire-bolid-formuly1",
            ],
            "type": "two",
          },
        ],
        "categories": Array [
          "feature",
        ],
      },
      "type": "section",
    },
  ],
  "posts": Object {
    "caterham-predstavila-byudzhetnyy-sportkar-on-okazalsya-samym-lyogkim-v-istorii": Object {
      "blocks": undefined,
      "categories": Array [
        Object {
          "tags": Array [],
          "title": "Фичер",
          "urlPart": "feature",
        },
      ],
      "lead": "Caterham Seven 170 оснащается мотором на 660 кубиков, но способен разогнаться до 169 км/ч",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T19:40:13.000Z,
      "tags": Array [],
      "title": "Компания Caterham показала дешёвый спорткар — он оказался самым лёгким в истории",
      "urlPart": "caterham-predstavila-byudzhetnyy-sportkar-on-okazalsya-samym-lyogkim-v-istorii",
    },
    "ford-narisoval-letayushchiy-avtomobil-budushchego-po-zayavkam-mladshih-shkolnikov": Object {
      "blocks": undefined,
      "categories": Array [
        Object {
          "tags": Array [],
          "title": "Фичер",
          "urlPart": "feature",
        },
      ],
      "lead": "Школьники заявили, что автомобиль будущего должен передвигаться на электротяге и уметь летать",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T18:37:44.000Z,
      "tags": Array [],
      "title": "Электрокар Ford 2030 года от 8-летних детей: представлены изображения",
      "urlPart": "ford-narisoval-letayushchiy-avtomobil-budushchego-po-zayavkam-mladshih-shkolnikov",
    },
    "posmotrite-kak-stroili-iz-lego-samyy-bolshoy-v-mire-bolid-formuly1": Object {
      "blocks": undefined,
      "categories": Array [
        Object {
          "tags": Array [],
          "title": "Фичер",
          "urlPart": "feature",
        },
      ],
      "lead": "Рекорд книги Гиннесcа приурочен к первой в истории Саудовской Аравии гонке Формулы-1",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T17:00:00.000Z,
      "tags": Array [],
      "title": "Посмотрите, как строили из Лего самый большой в мире болид Формулы-1",
      "urlPart": "posmotrite-kak-stroili-iz-lego-samyy-bolshoy-v-mire-bolid-formuly1",
    },
    "v-rossii-startovali-prodazhi-restaylingovogo-kia-rio-novye-logotip-i-mediasistema": Object {
      "blocks": undefined,
      "categories": Array [
        Object {
          "tags": Array [],
          "title": "Фичер",
          "urlPart": "feature",
        },
      ],
      "lead": "Базовая стоимость Rio в обоих кузовах после обновления выросла на 5 тысяч рублей",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T22:11:59.000Z,
      "tags": Array [],
      "title": "В России стартовали продажи Kia Rio нового модельного года",
      "urlPart": "v-rossii-startovali-prodazhi-restaylingovogo-kia-rio-novye-logotip-i-mediasistema",
    },
    "volkswagen-predstavil-bystruyu-zaryadnuyu-stanciyu-s-nakopitelnymi-batareyami": Object {
      "blocks": undefined,
      "categories": Array [
        Object {
          "tags": Array [],
          "title": "Фичер",
          "urlPart": "feature",
        },
      ],
      "lead": "В отличие от большинства, E.ON Drive Booster отдаёт автомобилю от собственных аккумуляторов",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T20:48:32.000Z,
      "tags": Array [],
      "title": "Volkswagen запустил быструю зарядную станцию с накопительными батареями",
      "urlPart": "volkswagen-predstavil-bystruyu-zaryadnuyu-stanciyu-s-nakopitelnymi-batareyami",
    },
  },
}
`;

exports[`Get main blocks transformer Блоки в секциях дополняются постами с категориями секции c правильной сортировкой 1`] = `
Object {
  "blocks": Array [
    Object {
      "section": Object {
        "blocks": Array [
          Object {
            "threeRight": Array [
              "v-rossii-startovali-prodazhi-restaylingovogo-kia-rio-novye-logotip-i-mediasistema",
              "caterham-predstavila-byudzhetnyy-sportkar-on-okazalsya-samym-lyogkim-v-istorii",
              "ford-narisoval-letayushchiy-avtomobil-budushchego-po-zayavkam-mladshih-shkolnikov",
            ],
            "type": "threeRight",
          },
        ],
        "categories": Array [
          "feature",
          "games",
        ],
      },
      "type": "section",
    },
  ],
  "posts": Object {
    "caterham-predstavila-byudzhetnyy-sportkar-on-okazalsya-samym-lyogkim-v-istorii": Object {
      "blocks": undefined,
      "categories": Array [
        Object {
          "tags": Array [],
          "title": "Фичер",
          "urlPart": "feature",
        },
        Object {
          "tags": Array [],
          "title": "Игры",
          "urlPart": "games",
        },
      ],
      "lead": "Caterham Seven 170 оснащается мотором на 660 кубиков, но способен разогнаться до 169 км/ч",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T19:40:13.000Z,
      "tags": Array [],
      "title": "Компания Caterham показала дешёвый спорткар — он оказался самым лёгким в истории",
      "urlPart": "caterham-predstavila-byudzhetnyy-sportkar-on-okazalsya-samym-lyogkim-v-istorii",
    },
    "ford-narisoval-letayushchiy-avtomobil-budushchego-po-zayavkam-mladshih-shkolnikov": Object {
      "blocks": undefined,
      "categories": Array [
        Object {
          "tags": Array [],
          "title": "Фичер",
          "urlPart": "feature",
        },
        Object {
          "tags": Array [],
          "title": "Игры",
          "urlPart": "games",
        },
        Object {
          "tags": Array [],
          "title": "Техника",
          "urlPart": "mechanics",
        },
      ],
      "lead": "Школьники заявили, что автомобиль будущего должен передвигаться на электротяге и уметь летать",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T18:37:44.000Z,
      "tags": Array [],
      "title": "Электрокар Ford 2030 года от 8-летних детей: представлены изображения",
      "urlPart": "ford-narisoval-letayushchiy-avtomobil-budushchego-po-zayavkam-mladshih-shkolnikov",
    },
    "v-rossii-startovali-prodazhi-restaylingovogo-kia-rio-novye-logotip-i-mediasistema": Object {
      "blocks": undefined,
      "categories": Array [
        Object {
          "tags": Array [],
          "title": "Фичер",
          "urlPart": "feature",
        },
        Object {
          "tags": Array [],
          "title": "Игры",
          "urlPart": "games",
        },
      ],
      "lead": "Базовая стоимость Rio в обоих кузовах после обновления выросла на 5 тысяч рублей",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T22:11:59.000Z,
      "tags": Array [],
      "title": "В России стартовали продажи Kia Rio нового модельного года",
      "urlPart": "v-rossii-startovali-prodazhi-restaylingovogo-kia-rio-novye-logotip-i-mediasistema",
    },
  },
}
`;

exports[`Get main blocks transformer Блоки в секциях дополняются постами с несколькими тегами и категориями секции c правильной сортировкой 1`] = `
Object {
  "blocks": Array [
    Object {
      "section": Object {
        "blocks": Array [
          Object {
            "threeRight": Array [
              "v-rossii-startovali-prodazhi-restaylingovogo-kia-rio-novye-logotip-i-mediasistema",
              "caterham-predstavila-byudzhetnyy-sportkar-on-okazalsya-samym-lyogkim-v-istorii",
              "realnye-ceny-na-avtomobili-samye-bolshie-nacenki-na-rynke",
            ],
            "type": "threeRight",
          },
          Object {
            "two": Array [
              "arest-za-ezdu-bez-osago-selskohozyaystvennyy-monstr-s-avtopilotom-i-samyy-naglyy-ugonshchik-glavnoe-za-den",
              "obnovlyonnyy-vw-polo-dlya-rossii-testiruyut-v-ispanii-pervye-foto",
            ],
            "type": "two",
          },
        ],
        "categories": Array [
          "feature",
          "games",
        ],
        "tags": Array [
          "conceptcar",
          "podcast",
        ],
      },
      "type": "section",
    },
  ],
  "posts": Object {
    "arest-za-ezdu-bez-osago-selskohozyaystvennyy-monstr-s-avtopilotom-i-samyy-naglyy-ugonshchik-glavnoe-za-den": Object {
      "blocks": undefined,
      "categories": Array [
        Object {
          "tags": Array [],
          "title": "Фичер",
          "urlPart": "feature",
        },
        Object {
          "tags": Array [],
          "title": "Игры",
          "urlPart": "games",
        },
      ],
      "lead": "Что случилось в пятницу, 24 сентября 2021 года",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T11:30:00.000Z,
      "tags": Array [
        Object {
          "isHot": false,
          "isPartnership": false,
          "mmm": null,
          "partnershipBadgeName": null,
          "partnershipImage": null,
          "partnershipLink": null,
          "partnershipName": null,
          "title": "Концепты",
          "urlPart": "conceptcar",
        },
        Object {
          "isHot": false,
          "isPartnership": false,
          "mmm": null,
          "partnershipBadgeName": null,
          "partnershipImage": null,
          "partnershipLink": null,
          "partnershipName": null,
          "title": " Подкаст",
          "urlPart": "podcast",
        },
      ],
      "title": "Арест за езду без ОСАГО, сельскохозяйственный монстр с автопилотом и самый наглый угонщик. Главное за день",
      "urlPart": "arest-za-ezdu-bez-osago-selskohozyaystvennyy-monstr-s-avtopilotom-i-samyy-naglyy-ugonshchik-glavnoe-za-den",
    },
    "caterham-predstavila-byudzhetnyy-sportkar-on-okazalsya-samym-lyogkim-v-istorii": Object {
      "blocks": undefined,
      "categories": Array [
        Object {
          "tags": Array [],
          "title": "Фичер",
          "urlPart": "feature",
        },
        Object {
          "tags": Array [],
          "title": "Игры",
          "urlPart": "games",
        },
      ],
      "lead": "Caterham Seven 170 оснащается мотором на 660 кубиков, но способен разогнаться до 169 км/ч",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T19:40:13.000Z,
      "tags": Array [
        Object {
          "isHot": false,
          "isPartnership": false,
          "mmm": null,
          "partnershipBadgeName": null,
          "partnershipImage": null,
          "partnershipLink": null,
          "partnershipName": null,
          "title": "Концепты",
          "urlPart": "conceptcar",
        },
        Object {
          "isHot": false,
          "isPartnership": false,
          "mmm": null,
          "partnershipBadgeName": null,
          "partnershipImage": null,
          "partnershipLink": null,
          "partnershipName": null,
          "title": " Подкаст",
          "urlPart": "podcast",
        },
      ],
      "title": "Компания Caterham показала дешёвый спорткар — он оказался самым лёгким в истории",
      "urlPart": "caterham-predstavila-byudzhetnyy-sportkar-on-okazalsya-samym-lyogkim-v-istorii",
    },
    "obnovlyonnyy-vw-polo-dlya-rossii-testiruyut-v-ispanii-pervye-foto": Object {
      "blocks": undefined,
      "categories": Array [
        Object {
          "tags": Array [],
          "title": "Фичер",
          "urlPart": "feature",
        },
        Object {
          "tags": Array [],
          "title": "Игры",
          "urlPart": "games",
        },
      ],
      "lead": "Предполагается, что на российский рынок новинка выйдет не ранее 2023 года",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T10:20:36.000Z,
      "tags": Array [
        Object {
          "isHot": false,
          "isPartnership": false,
          "mmm": null,
          "partnershipBadgeName": null,
          "partnershipImage": null,
          "partnershipLink": null,
          "partnershipName": null,
          "title": "Концепты",
          "urlPart": "conceptcar",
        },
        Object {
          "isHot": false,
          "isPartnership": false,
          "mmm": null,
          "partnershipBadgeName": null,
          "partnershipImage": null,
          "partnershipLink": null,
          "partnershipName": null,
          "title": " Подкаст",
          "urlPart": "podcast",
        },
      ],
      "title": "Обновлённый VW Polo для России вывели на тесты: первые фото",
      "urlPart": "obnovlyonnyy-vw-polo-dlya-rossii-testiruyut-v-ispanii-pervye-foto",
    },
    "realnye-ceny-na-avtomobili-samye-bolshie-nacenki-na-rynke": Object {
      "blocks": undefined,
      "categories": Array [
        Object {
          "tags": Array [],
          "title": "Фичер",
          "urlPart": "feature",
        },
        Object {
          "tags": Array [],
          "title": "Игры",
          "urlPart": "games",
        },
      ],
      "lead": "Какую доплату просят дилеры за востребованные и дорогие автомобили",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T16:01:00.000Z,
      "tags": Array [
        Object {
          "isHot": false,
          "isPartnership": false,
          "mmm": null,
          "partnershipBadgeName": null,
          "partnershipImage": null,
          "partnershipLink": null,
          "partnershipName": null,
          "title": "Концепты",
          "urlPart": "conceptcar",
        },
        Object {
          "isHot": false,
          "isPartnership": false,
          "mmm": null,
          "partnershipBadgeName": null,
          "partnershipImage": null,
          "partnershipLink": null,
          "partnershipName": null,
          "title": " Подкаст",
          "urlPart": "podcast",
        },
      ],
      "title": "На какие модели дилеры делают наценку по миллиону и больше: реальные цены на автомобили",
      "urlPart": "realnye-ceny-na-avtomobili-samye-bolshie-nacenki-na-rynke",
    },
    "v-rossii-startovali-prodazhi-restaylingovogo-kia-rio-novye-logotip-i-mediasistema": Object {
      "blocks": undefined,
      "categories": Array [
        Object {
          "tags": Array [],
          "title": "Фичер",
          "urlPart": "feature",
        },
        Object {
          "tags": Array [],
          "title": "Игры",
          "urlPart": "games",
        },
      ],
      "lead": "Базовая стоимость Rio в обоих кузовах после обновления выросла на 5 тысяч рублей",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T22:11:59.000Z,
      "tags": Array [
        Object {
          "isHot": false,
          "isPartnership": false,
          "mmm": null,
          "partnershipBadgeName": null,
          "partnershipImage": null,
          "partnershipLink": null,
          "partnershipName": null,
          "title": "Концепты",
          "urlPart": "conceptcar",
        },
        Object {
          "isHot": false,
          "isPartnership": false,
          "mmm": null,
          "partnershipBadgeName": null,
          "partnershipImage": null,
          "partnershipLink": null,
          "partnershipName": null,
          "title": " Подкаст",
          "urlPart": "podcast",
        },
      ],
      "title": "В России стартовали продажи Kia Rio нового модельного года",
      "urlPart": "v-rossii-startovali-prodazhi-restaylingovogo-kia-rio-novye-logotip-i-mediasistema",
    },
  },
}
`;

exports[`Get main blocks transformer Блоки в секциях дополняются постами с тегами секции c правильной сортировкой 1`] = `
Object {
  "blocks": Array [
    Object {
      "section": Object {
        "blocks": Array [
          Object {
            "threeBottom": Array [
              "toyota-postavit-motor-ot-novogo-land-cruiser-na-bolid-dlya-dakara",
              "volkswagen-predstavil-bystruyu-zaryadnuyu-stanciyu-s-nakopitelnymi-batareyami",
              "ford-narisoval-letayushchiy-avtomobil-budushchego-po-zayavkam-mladshih-shkolnikov",
            ],
            "type": "threeBottom",
          },
        ],
        "tags": Array [
          "conceptcar",
          "podcast",
        ],
      },
      "type": "section",
    },
  ],
  "posts": Object {
    "ford-narisoval-letayushchiy-avtomobil-budushchego-po-zayavkam-mladshih-shkolnikov": Object {
      "blocks": undefined,
      "categories": Array [],
      "lead": "Школьники заявили, что автомобиль будущего должен передвигаться на электротяге и уметь летать",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T18:37:44.000Z,
      "tags": Array [
        Object {
          "isHot": false,
          "isPartnership": false,
          "mmm": null,
          "partnershipBadgeName": null,
          "partnershipImage": null,
          "partnershipLink": null,
          "partnershipName": null,
          "title": "Концепты",
          "urlPart": "conceptcar",
        },
        Object {
          "isHot": false,
          "isPartnership": false,
          "mmm": null,
          "partnershipBadgeName": null,
          "partnershipImage": null,
          "partnershipLink": null,
          "partnershipName": null,
          "title": " Подкаст",
          "urlPart": "podcast",
        },
      ],
      "title": "Электрокар Ford 2030 года от 8-летних детей: представлены изображения",
      "urlPart": "ford-narisoval-letayushchiy-avtomobil-budushchego-po-zayavkam-mladshih-shkolnikov",
    },
    "toyota-postavit-motor-ot-novogo-land-cruiser-na-bolid-dlya-dakara": Object {
      "blocks": undefined,
      "categories": Array [],
      "lead": "Новый спортивный внедорожник проходит испытания в Южной Африке",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T21:06:10.000Z,
      "tags": Array [
        Object {
          "isHot": false,
          "isPartnership": false,
          "mmm": null,
          "partnershipBadgeName": null,
          "partnershipImage": null,
          "partnershipLink": null,
          "partnershipName": null,
          "title": "Концепты",
          "urlPart": "conceptcar",
        },
        Object {
          "isHot": false,
          "isPartnership": false,
          "mmm": null,
          "partnershipBadgeName": null,
          "partnershipImage": null,
          "partnershipLink": null,
          "partnershipName": null,
          "title": " Подкаст",
          "urlPart": "podcast",
        },
      ],
      "title": "Toyota показала болид для Дакара с мотором от нового Land Cruiser ",
      "urlPart": "toyota-postavit-motor-ot-novogo-land-cruiser-na-bolid-dlya-dakara",
    },
    "volkswagen-predstavil-bystruyu-zaryadnuyu-stanciyu-s-nakopitelnymi-batareyami": Object {
      "blocks": undefined,
      "categories": Array [],
      "lead": "В отличие от большинства, E.ON Drive Booster отдаёт автомобилю от собственных аккумуляторов",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T20:48:32.000Z,
      "tags": Array [
        Object {
          "isHot": false,
          "isPartnership": false,
          "mmm": null,
          "partnershipBadgeName": null,
          "partnershipImage": null,
          "partnershipLink": null,
          "partnershipName": null,
          "title": "Концепты",
          "urlPart": "conceptcar",
        },
        Object {
          "isHot": false,
          "isPartnership": false,
          "mmm": "OPEL,ASTRA",
          "partnershipBadgeName": null,
          "partnershipImage": null,
          "partnershipLink": null,
          "partnershipName": null,
          "title": "Astra",
          "urlPart": "opel-astra",
        },
        Object {
          "isHot": false,
          "isPartnership": false,
          "mmm": null,
          "partnershipBadgeName": null,
          "partnershipImage": null,
          "partnershipLink": null,
          "partnershipName": null,
          "title": " Подкаст",
          "urlPart": "podcast",
        },
      ],
      "title": "Volkswagen запустил быструю зарядную станцию с накопительными батареями",
      "urlPart": "volkswagen-predstavil-bystruyu-zaryadnuyu-stanciyu-s-nakopitelnymi-batareyami",
    },
  },
}
`;

exports[`Get main blocks transformer Блоки в секциях дополняются постами с тегом секции c правильной сортировкой 1`] = `
Object {
  "blocks": Array [
    Object {
      "section": Object {
        "blocks": Array [
          Object {
            "two": Array [
              "v-rossii-startovali-prodazhi-restaylingovogo-kia-rio-novye-logotip-i-mediasistema",
              "toyota-postavit-motor-ot-novogo-land-cruiser-na-bolid-dlya-dakara",
            ],
            "type": "two",
          },
          Object {
            "threeBottom": Array [
              "caterham-predstavila-byudzhetnyy-sportkar-on-okazalsya-samym-lyogkim-v-istorii",
              "ford-narisoval-letayushchiy-avtomobil-budushchego-po-zayavkam-mladshih-shkolnikov",
              "posmotrite-kak-stroili-iz-lego-samyy-bolshoy-v-mire-bolid-formuly1",
            ],
            "type": "threeBottom",
          },
        ],
        "tags": Array [
          "conceptcar",
        ],
      },
      "type": "section",
    },
  ],
  "posts": Object {
    "caterham-predstavila-byudzhetnyy-sportkar-on-okazalsya-samym-lyogkim-v-istorii": Object {
      "blocks": undefined,
      "categories": Array [],
      "lead": "Caterham Seven 170 оснащается мотором на 660 кубиков, но способен разогнаться до 169 км/ч",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T19:40:13.000Z,
      "tags": Array [
        Object {
          "isHot": false,
          "isPartnership": false,
          "mmm": null,
          "partnershipBadgeName": null,
          "partnershipImage": null,
          "partnershipLink": null,
          "partnershipName": null,
          "title": "Концепты",
          "urlPart": "conceptcar",
        },
      ],
      "title": "Компания Caterham показала дешёвый спорткар — он оказался самым лёгким в истории",
      "urlPart": "caterham-predstavila-byudzhetnyy-sportkar-on-okazalsya-samym-lyogkim-v-istorii",
    },
    "ford-narisoval-letayushchiy-avtomobil-budushchego-po-zayavkam-mladshih-shkolnikov": Object {
      "blocks": undefined,
      "categories": Array [],
      "lead": "Школьники заявили, что автомобиль будущего должен передвигаться на электротяге и уметь летать",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T18:37:44.000Z,
      "tags": Array [
        Object {
          "isHot": false,
          "isPartnership": false,
          "mmm": null,
          "partnershipBadgeName": null,
          "partnershipImage": null,
          "partnershipLink": null,
          "partnershipName": null,
          "title": "Концепты",
          "urlPart": "conceptcar",
        },
      ],
      "title": "Электрокар Ford 2030 года от 8-летних детей: представлены изображения",
      "urlPart": "ford-narisoval-letayushchiy-avtomobil-budushchego-po-zayavkam-mladshih-shkolnikov",
    },
    "posmotrite-kak-stroili-iz-lego-samyy-bolshoy-v-mire-bolid-formuly1": Object {
      "blocks": undefined,
      "categories": Array [],
      "lead": "Рекорд книги Гиннесcа приурочен к первой в истории Саудовской Аравии гонке Формулы-1",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T17:00:00.000Z,
      "tags": Array [
        Object {
          "isHot": false,
          "isPartnership": false,
          "mmm": null,
          "partnershipBadgeName": null,
          "partnershipImage": null,
          "partnershipLink": null,
          "partnershipName": null,
          "title": "Концепты",
          "urlPart": "conceptcar",
        },
      ],
      "title": "Посмотрите, как строили из Лего самый большой в мире болид Формулы-1",
      "urlPart": "posmotrite-kak-stroili-iz-lego-samyy-bolshoy-v-mire-bolid-formuly1",
    },
    "toyota-postavit-motor-ot-novogo-land-cruiser-na-bolid-dlya-dakara": Object {
      "blocks": undefined,
      "categories": Array [],
      "lead": "Новый спортивный внедорожник проходит испытания в Южной Африке",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T21:06:10.000Z,
      "tags": Array [
        Object {
          "isHot": false,
          "isPartnership": false,
          "mmm": null,
          "partnershipBadgeName": null,
          "partnershipImage": null,
          "partnershipLink": null,
          "partnershipName": null,
          "title": "Концепты",
          "urlPart": "conceptcar",
        },
      ],
      "title": "Toyota показала болид для Дакара с мотором от нового Land Cruiser ",
      "urlPart": "toyota-postavit-motor-ot-novogo-land-cruiser-na-bolid-dlya-dakara",
    },
    "v-rossii-startovali-prodazhi-restaylingovogo-kia-rio-novye-logotip-i-mediasistema": Object {
      "blocks": undefined,
      "categories": Array [],
      "lead": "Базовая стоимость Rio в обоих кузовах после обновления выросла на 5 тысяч рублей",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T22:11:59.000Z,
      "tags": Array [
        Object {
          "isHot": false,
          "isPartnership": false,
          "mmm": null,
          "partnershipBadgeName": null,
          "partnershipImage": null,
          "partnershipLink": null,
          "partnershipName": null,
          "title": "Концепты",
          "urlPart": "conceptcar",
        },
      ],
      "title": "В России стартовали продажи Kia Rio нового модельного года",
      "urlPart": "v-rossii-startovali-prodazhi-restaylingovogo-kia-rio-novye-logotip-i-mediasistema",
    },
  },
}
`;

exports[`Get main blocks transformer Блоки в секциях дополняются только опубликованными постами 1`] = `
Object {
  "blocks": Array [
    Object {
      "section": Object {
        "blocks": Array [
          Object {
            "two": Array [
              "v-rossii-startovali-prodazhi-restaylingovogo-kia-rio-novye-logotip-i-mediasistema",
              "caterham-predstavila-byudzhetnyy-sportkar-on-okazalsya-samym-lyogkim-v-istorii",
            ],
            "type": "two",
          },
          Object {
            "oneBig": "posmotrite-kak-stroili-iz-lego-samyy-bolshoy-v-mire-bolid-formuly1",
            "type": "oneBig",
          },
          Object {
            "oneBig": "realnye-ceny-na-avtomobili-samye-bolshie-nacenki-na-rynke",
            "type": "oneBig",
          },
        ],
      },
      "type": "section",
    },
  ],
  "posts": Object {
    "caterham-predstavila-byudzhetnyy-sportkar-on-okazalsya-samym-lyogkim-v-istorii": Object {
      "blocks": undefined,
      "categories": Array [],
      "lead": "Caterham Seven 170 оснащается мотором на 660 кубиков, но способен разогнаться до 169 км/ч",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T19:40:13.000Z,
      "tags": Array [],
      "title": "Компания Caterham показала дешёвый спорткар — он оказался самым лёгким в истории",
      "urlPart": "caterham-predstavila-byudzhetnyy-sportkar-on-okazalsya-samym-lyogkim-v-istorii",
    },
    "posmotrite-kak-stroili-iz-lego-samyy-bolshoy-v-mire-bolid-formuly1": Object {
      "blocks": Array [],
      "categories": Array [],
      "lead": "Рекорд книги Гиннесcа приурочен к первой в истории Саудовской Аравии гонке Формулы-1",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T17:00:00.000Z,
      "tags": Array [],
      "title": "Посмотрите, как строили из Лего самый большой в мире болид Формулы-1",
      "urlPart": "posmotrite-kak-stroili-iz-lego-samyy-bolshoy-v-mire-bolid-formuly1",
    },
    "realnye-ceny-na-avtomobili-samye-bolshie-nacenki-na-rynke": Object {
      "blocks": Array [],
      "categories": Array [],
      "lead": "Какую доплату просят дилеры за востребованные и дорогие автомобили",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T16:01:00.000Z,
      "tags": Array [],
      "title": "На какие модели дилеры делают наценку по миллиону и больше: реальные цены на автомобили",
      "urlPart": "realnye-ceny-na-avtomobili-samye-bolshie-nacenki-na-rynke",
    },
    "v-rossii-startovali-prodazhi-restaylingovogo-kia-rio-novye-logotip-i-mediasistema": Object {
      "blocks": undefined,
      "categories": Array [],
      "lead": "Базовая стоимость Rio в обоих кузовах после обновления выросла на 5 тысяч рублей",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T22:11:59.000Z,
      "tags": Array [],
      "title": "В России стартовали продажи Kia Rio нового модельного года",
      "urlPart": "v-rossii-startovali-prodazhi-restaylingovogo-kia-rio-novye-logotip-i-mediasistema",
    },
  },
}
`;

exports[`Get main blocks transformer Блоки в секциях отфильтровываются при отсутствии достаточного количества постов 1`] = `
Object {
  "blocks": Array [
    Object {
      "section": Object {
        "blocks": Array [
          Object {
            "two": Array [
              "v-rossii-startovali-prodazhi-restaylingovogo-kia-rio-novye-logotip-i-mediasistema",
              "toyota-postavit-motor-ot-novogo-land-cruiser-na-bolid-dlya-dakara",
            ],
            "type": "two",
          },
        ],
        "categories": Array [
          "feature",
        ],
      },
      "type": "section",
    },
  ],
  "posts": Object {
    "toyota-postavit-motor-ot-novogo-land-cruiser-na-bolid-dlya-dakara": Object {
      "blocks": undefined,
      "categories": Array [
        Object {
          "tags": Array [],
          "title": "Фичер",
          "urlPart": "feature",
        },
      ],
      "lead": "Новый спортивный внедорожник проходит испытания в Южной Африке",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T21:06:10.000Z,
      "tags": Array [],
      "title": "Toyota показала болид для Дакара с мотором от нового Land Cruiser ",
      "urlPart": "toyota-postavit-motor-ot-novogo-land-cruiser-na-bolid-dlya-dakara",
    },
    "v-rossii-startovali-prodazhi-restaylingovogo-kia-rio-novye-logotip-i-mediasistema": Object {
      "blocks": undefined,
      "categories": Array [
        Object {
          "tags": Array [],
          "title": "Фичер",
          "urlPart": "feature",
        },
      ],
      "lead": "Базовая стоимость Rio в обоих кузовах после обновления выросла на 5 тысяч рублей",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T22:11:59.000Z,
      "tags": Array [],
      "title": "В России стартовали продажи Kia Rio нового модельного года",
      "urlPart": "v-rossii-startovali-prodazhi-restaylingovogo-kia-rio-novye-logotip-i-mediasistema",
    },
  },
}
`;

exports[`Get main blocks transformer Блоки в секциях сохраняют выбранные явно посты на правильных позициях 1`] = `
Object {
  "blocks": Array [
    Object {
      "section": Object {
        "blocks": Array [
          Object {
            "two": Array [
              "toyota-postavit-motor-ot-novogo-land-cruiser-na-bolid-dlya-dakara",
              "ford-narisoval-letayushchiy-avtomobil-budushchego-po-zayavkam-mladshih-shkolnikov",
            ],
            "type": "two",
          },
          Object {
            "threeRight": Array [
              "v-rossii-startovali-prodazhi-restaylingovogo-kia-rio-novye-logotip-i-mediasistema",
              "volkswagen-predstavil-bystruyu-zaryadnuyu-stanciyu-s-nakopitelnymi-batareyami",
              "caterham-predstavila-byudzhetnyy-sportkar-on-okazalsya-samym-lyogkim-v-istorii",
            ],
            "type": "threeRight",
          },
        ],
      },
      "type": "section",
    },
  ],
  "posts": Object {
    "caterham-predstavila-byudzhetnyy-sportkar-on-okazalsya-samym-lyogkim-v-istorii": Object {
      "blocks": undefined,
      "categories": Array [
        Object {
          "tags": Array [],
          "title": "Фичер",
          "urlPart": "feature",
        },
      ],
      "lead": "Caterham Seven 170 оснащается мотором на 660 кубиков, но способен разогнаться до 169 км/ч",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T19:40:13.000Z,
      "tags": Array [],
      "title": "Компания Caterham показала дешёвый спорткар — он оказался самым лёгким в истории",
      "urlPart": "caterham-predstavila-byudzhetnyy-sportkar-on-okazalsya-samym-lyogkim-v-istorii",
    },
    "ford-narisoval-letayushchiy-avtomobil-budushchego-po-zayavkam-mladshih-shkolnikov": Object {
      "blocks": undefined,
      "categories": Array [],
      "lead": "Школьники заявили, что автомобиль будущего должен передвигаться на электротяге и уметь летать",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T18:37:44.000Z,
      "tags": Array [],
      "title": "Электрокар Ford 2030 года от 8-летних детей: представлены изображения",
      "urlPart": "ford-narisoval-letayushchiy-avtomobil-budushchego-po-zayavkam-mladshih-shkolnikov",
    },
    "toyota-postavit-motor-ot-novogo-land-cruiser-na-bolid-dlya-dakara": Object {
      "blocks": undefined,
      "categories": Array [],
      "lead": "Новый спортивный внедорожник проходит испытания в Южной Африке",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T21:06:10.000Z,
      "tags": Array [],
      "title": "Toyota показала болид для Дакара с мотором от нового Land Cruiser ",
      "urlPart": "toyota-postavit-motor-ot-novogo-land-cruiser-na-bolid-dlya-dakara",
    },
    "v-rossii-startovali-prodazhi-restaylingovogo-kia-rio-novye-logotip-i-mediasistema": Object {
      "blocks": undefined,
      "categories": Array [
        Object {
          "tags": Array [],
          "title": "Фичер",
          "urlPart": "feature",
        },
      ],
      "lead": "Базовая стоимость Rio в обоих кузовах после обновления выросла на 5 тысяч рублей",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T22:11:59.000Z,
      "tags": Array [],
      "title": "В России стартовали продажи Kia Rio нового модельного года",
      "urlPart": "v-rossii-startovali-prodazhi-restaylingovogo-kia-rio-novye-logotip-i-mediasistema",
    },
    "volkswagen-predstavil-bystruyu-zaryadnuyu-stanciyu-s-nakopitelnymi-batareyami": Object {
      "blocks": undefined,
      "categories": Array [],
      "lead": "В отличие от большинства, E.ON Drive Booster отдаёт автомобилю от собственных аккумуляторов",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T20:48:32.000Z,
      "tags": Array [],
      "title": "Volkswagen запустил быструю зарядную станцию с накопительными батареями",
      "urlPart": "volkswagen-predstavil-bystruyu-zaryadnuyu-stanciyu-s-nakopitelnymi-batareyami",
    },
  },
}
`;

exports[`Get main blocks transformer Блоки не дополняются одним постом дважды 1`] = `
Object {
  "blocks": Array [
    Object {
      "section": Object {
        "blocks": Array [
          Object {
            "two": Array [
              "v-rossii-startovali-prodazhi-restaylingovogo-kia-rio-novye-logotip-i-mediasistema",
              "toyota-postavit-motor-ot-novogo-land-cruiser-na-bolid-dlya-dakara",
            ],
            "type": "two",
          },
        ],
      },
      "type": "section",
    },
    Object {
      "readMore": Object {
        "category": "feature",
        "morePostsNum": 9,
        "posts": Array [
          "volkswagen-predstavil-bystruyu-zaryadnuyu-stanciyu-s-nakopitelnymi-batareyami",
          "caterham-predstavila-byudzhetnyy-sportkar-on-okazalsya-samym-lyogkim-v-istorii",
        ],
      },
      "type": "readMore",
    },
    Object {
      "ideas": Object {
        "category": "feature",
        "posts": Array [
          "ford-narisoval-letayushchiy-avtomobil-budushchego-po-zayavkam-mladshih-shkolnikov",
          "posmotrite-kak-stroili-iz-lego-samyy-bolshoy-v-mire-bolid-formuly1",
        ],
        "tags": Array [],
      },
      "type": "ideas",
    },
  ],
  "posts": Object {
    "caterham-predstavila-byudzhetnyy-sportkar-on-okazalsya-samym-lyogkim-v-istorii": Object {
      "blocks": undefined,
      "categories": Array [
        Object {
          "tags": Array [],
          "title": "Фичер",
          "urlPart": "feature",
        },
      ],
      "lead": "Caterham Seven 170 оснащается мотором на 660 кубиков, но способен разогнаться до 169 км/ч",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T19:40:13.000Z,
      "tags": Array [],
      "title": "Компания Caterham показала дешёвый спорткар — он оказался самым лёгким в истории",
      "urlPart": "caterham-predstavila-byudzhetnyy-sportkar-on-okazalsya-samym-lyogkim-v-istorii",
    },
    "ford-narisoval-letayushchiy-avtomobil-budushchego-po-zayavkam-mladshih-shkolnikov": Object {
      "blocks": undefined,
      "categories": Array [
        Object {
          "tags": Array [],
          "title": "Фичер",
          "urlPart": "feature",
        },
      ],
      "lead": "Школьники заявили, что автомобиль будущего должен передвигаться на электротяге и уметь летать",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T18:37:44.000Z,
      "tags": Array [],
      "title": "Электрокар Ford 2030 года от 8-летних детей: представлены изображения",
      "urlPart": "ford-narisoval-letayushchiy-avtomobil-budushchego-po-zayavkam-mladshih-shkolnikov",
    },
    "posmotrite-kak-stroili-iz-lego-samyy-bolshoy-v-mire-bolid-formuly1": Object {
      "blocks": undefined,
      "categories": Array [
        Object {
          "tags": Array [],
          "title": "Фичер",
          "urlPart": "feature",
        },
      ],
      "lead": "Рекорд книги Гиннесcа приурочен к первой в истории Саудовской Аравии гонке Формулы-1",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T17:00:00.000Z,
      "tags": Array [],
      "title": "Посмотрите, как строили из Лего самый большой в мире болид Формулы-1",
      "urlPart": "posmotrite-kak-stroili-iz-lego-samyy-bolshoy-v-mire-bolid-formuly1",
    },
    "toyota-postavit-motor-ot-novogo-land-cruiser-na-bolid-dlya-dakara": Object {
      "blocks": undefined,
      "categories": Array [
        Object {
          "tags": Array [],
          "title": "Фичер",
          "urlPart": "feature",
        },
      ],
      "lead": "Новый спортивный внедорожник проходит испытания в Южной Африке",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T21:06:10.000Z,
      "tags": Array [],
      "title": "Toyota показала болид для Дакара с мотором от нового Land Cruiser ",
      "urlPart": "toyota-postavit-motor-ot-novogo-land-cruiser-na-bolid-dlya-dakara",
    },
    "v-rossii-startovali-prodazhi-restaylingovogo-kia-rio-novye-logotip-i-mediasistema": Object {
      "blocks": undefined,
      "categories": Array [
        Object {
          "tags": Array [],
          "title": "Фичер",
          "urlPart": "feature",
        },
      ],
      "lead": "Базовая стоимость Rio в обоих кузовах после обновления выросла на 5 тысяч рублей",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T22:11:59.000Z,
      "tags": Array [],
      "title": "В России стартовали продажи Kia Rio нового модельного года",
      "urlPart": "v-rossii-startovali-prodazhi-restaylingovogo-kia-rio-novye-logotip-i-mediasistema",
    },
    "volkswagen-predstavil-bystruyu-zaryadnuyu-stanciyu-s-nakopitelnymi-batareyami": Object {
      "blocks": undefined,
      "categories": Array [
        Object {
          "tags": Array [],
          "title": "Фичер",
          "urlPart": "feature",
        },
      ],
      "lead": "В отличие от большинства, E.ON Drive Booster отдаёт автомобилю от собственных аккумуляторов",
      "mainImage": null,
      "mainImageDescription": null,
      "mainImageTitle": null,
      "publishAt": 2021-09-01T20:48:32.000Z,
      "tags": Array [],
      "title": "Volkswagen запустил быструю зарядную станцию с накопительными батареями",
      "urlPart": "volkswagen-predstavil-bystruyu-zaryadnuyu-stanciyu-s-nakopitelnymi-batareyami",
    },
  },
}
`;
